--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     ]
   },
   "devDependencies": {
+    "@redwoodjs/cli-storybook": "6.3.2",
     "@redwoodjs/core": "6.3.2"
   },
   "eslintConfig": {
