--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@redwoodjs/vite": "6.3.2",
+    "@storybook/react": "^7.4.6",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6"
   }
