--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "@redwoodjs/cli-storybook": "6.3.2",
-    "@redwoodjs/core": "6.3.2"
+    "@redwoodjs/core": "6.3.2",
+    "prettier-plugin-tailwindcss": "0.4.1"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
