--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,12 @@
     "@redwoodjs/vite": "6.3.2",
     "@storybook/react": "^7.4.6",
     "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6"
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.69.4",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.3"
   }
 }
